<resources>
    <string name="app_name">MJ Songs</string>
    <string name="action_settings">Settings</string>
    <string name="price_title">Price</string>
    <string name="duration_title">Duration</string>
    <string name="genre_title">Genre</string>
    <string name="release_date_title">Release Date</string>
    <string name="not_explicit">Not Explicit</string>
    <string name="explicitness_title">Explicitness</string>
    <string name="not_explicit_format">notExplicit</string>
    <string name="explicit">Explicit</string>
    <string name="try_again">REFRESH</string>
    <string name="album_purchase_only">Album Only</string>
</resources>
