<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_nested_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/detail_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_large"
                    android:layout_marginRight="@dimen/spacing_large"
                    android:layout_marginTop="@dimen/space_top"
                    tools:text="Title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

                <TextView
                    android:id="@+id/detail_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_large"
                    tools:text="Description"

                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:layout_marginStart="@dimen/spacing_large"
                    android:layout_marginEnd="@dimen/spacing_large"
                    android:background="@color/black"
                    android:alpha=".12"/>

                <TextView
                    android:id="@+id/price_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_large"
                    android:layout_marginRight="@dimen/spacing_large"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:text="@string/price_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textSize="@dimen/detail_text_size" />

                <TextView
                    android:id="@+id/price_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_large"
                    android:layout_marginRight="@dimen/spacing_large"

                    tools:text="$1.29"
                    android:textSize="@dimen/detail_text_size" />

                <TextView
                    android:id="@+id/duration_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_large"
                    android:layout_marginRight="@dimen/spacing_large"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:text="@string/duration_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textSize="@dimen/detail_text_size" />

                <TextView
                    android:id="@+id/duration_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_large"
                    android:layout_marginRight="@dimen/spacing_large"

                    tools:text="14/:12"
                    android:textSize="@dimen/detail_text_size" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_large"
                    android:layout_marginRight="@dimen/spacing_large"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:text="@string/genre_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textSize="@dimen/detail_text_size" />

                <TextView
                    android:id="@+id/genre_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_large"
                    android:layout_marginRight="@dimen/spacing_large"

                    tools:text="Pop"
                    android:textSize="@dimen/detail_text_size" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_large"
                    android:layout_marginRight="@dimen/spacing_large"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:text="@string/release_date_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textSize="@dimen/detail_text_size" />

                <TextView
                    android:id="@+id/release_date_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_large"
                    android:layout_marginRight="@dimen/spacing_large"

                    tools:text="November 30, 1982"
                    android:textSize="@dimen/detail_text_size" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_large"
                    android:layout_marginRight="@dimen/spacing_large"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:text="@string/explicitness_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textSize="@dimen/detail_text_size" />

                <TextView
                    android:id="@+id/explicitness_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_large"
                    android:layout_marginRight="@dimen/spacing_large"

                    tools:text="@string/not_explicit"
                    android:textSize="@dimen/detail_text_size"
                    android:layout_marginBottom="@dimen/spacing_large"/>

            </LinearLayout>


    </FrameLayout>

</android.support.v4.widget.NestedScrollView>


